fix burger menu alignment

--- a/personal-styles.css
+++ b/personal-styles.css
@@ -35,7 +35,7 @@ html, body {
 
 #burger-menu {
     position: absolute;
-    top: 47px;
+    top: 48px;
     right: -300px;
     width: 300px;
     height: 100vh;
